--- a/page2.html
+++ b/page2.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=jyRfca"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=jyRfca" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=poSM2t"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=poSM2t" type="text/css">
 
   
   
@@ -186,19 +186,27 @@
                     
                 <div class="soc-item">
                         <a href="https://wa.me/27791730218">
-                            <span class="mbr-iconfont mbr-iconfont-social socicon-whatsapp socicon"></span>
+                            <span class="mbr-iconfont mbr-iconfont-social socicon-whatsapp socicon" style="color: rgb(5, 159, 17); fill: rgb(5, 159, 17);"></span>
                         </a>
                     </div><div class="soc-item">
                         <a href="https://www.facebook.com/profile.php?id=100067829903984" target="_blank">
-                            <span class="mbr-iconfont mbr-iconfont-social socicon-facebook socicon"></span>
+                            <span class="mbr-iconfont mbr-iconfont-social socicon-facebook socicon" style="color: rgb(68, 121, 217); fill: rgb(68, 121, 217);"></span>
                         </a>
                     </div><div class="soc-item">
                         <a href="tel:+27791730218">
-                            <span class="mbr-iconfont mbr-iconfont-social mobi-mbri-phone mobi-mbri"></span>
+                            <span class="mbr-iconfont mbr-iconfont-social mobi-mbri-phone mobi-mbri" style="color: rgb(230, 198, 59); fill: rgb(230, 198, 59);"></span>
                         </a>
                     </div><div class="soc-item">
                         <a href="mailto:charlespokane2008@gmail.com?subject=online%20query">
-                            <span class="mbr-iconfont mbr-iconfont-social socicon-mail socicon"></span>
+                            <span class="mbr-iconfont mbr-iconfont-social socicon-mail socicon" style="color: rgb(230, 198, 59); fill: rgb(230, 198, 59);"></span>
+                        </a>
+                    </div><div class="soc-item">
+                        <a href="tel:+27835165562">
+                            <span class="mbr-iconfont mbr-iconfont-social mobi-mbri-phone mobi-mbri" style="color: rgb(68, 121, 217); fill: rgb(68, 121, 217);"></span>
+                        </a>
+                    </div><div class="soc-item">
+                        <a href="mailto:relicionnhlamulo@gmail.com?subject=online%20query">
+                            <span class="mbr-iconfont mbr-iconfont-social socicon-mail socicon" style="color: rgb(68, 121, 217); fill: rgb(68, 121, 217);"></span>
                         </a>
                     </div></div>
             </div>
@@ -208,7 +216,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/4388259" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt=" Web Page  Software" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Created with Mobirise &#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Offline Website Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/4388259" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="Mobirise.com" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Designed with &#8204;</p><a style="z-index:1" href="https://mobirise.com">Mobirise.com </a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
